# Stride28-search-mcp

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  mcp_server.py  pyproject.toml  requirements.txt
src/mcp/: __init__.py  adapter.py  lifecycle.py  zhihu_adapter.py
stride28_search_mcp/: __init__.py  adapter.py  lifecycle.py  models.py  server.py  state.py  zhihu_adapter.py
tests/: test_property_10_captcha_semantics.py  test_property_11_zhihu_truncation.py  test_property_1_empty_title.py  test_property_2_publish_time_detail.py  test_property_3_publish_time_search.py  test_property_4_comment_limit.py  test_property_5_search_url_type.py  test_property_6_captcha_envelope.py  test_property_7_rate_limiter.py  test_property_8_error_envelope.py  test_property_9_hard_stop.py  test_rate_limiter.py  test_unit_adapter.py  test_unit_lifecycle.py  test_unit_models.py  test_unit_server.py  test_unit_state.py  test_unit_zhihu.py
tests/fixtures/: xhs_search_feeds_snapshot.json
