[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stride28-search-mcp"
version = "0.1.1"
description = "小红书 + 知乎搜索 MCP Server（纯浏览器方案）"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BrunonXU" },
]
keywords = ["mcp", "xiaohongshu", "zhihu", "search", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.49.0",
    "pydantic>=2.0.0",
    "playwright-stealth>=1.0.6",
]

[project.scripts]
stride28-search-mcp = "stride28_search_mcp.server:main"

[project.urls]
Homepage = "https://github.com/BrunonXU/Stride28-search-mcp"
Repository = "https://github.com/BrunonXU/Stride28-search-mcp"
